# pipedconsole

./: .gitignore  .rustc_info.json  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug--console--new---fails-with-error-code-2---file-not-found--.md  bug_report.md  documentation-related.md  feature_request.md
debug/: console_worker.d
debug/.fingerprint/pipedconsole-1a1403a0c7384b9c/: run-build-script-build-script-build  run-build-script-build-script-build.json
debug/.fingerprint/pipedconsole-86e41bc2002d0d28/: bin-console_worker  bin-console_worker.json  dep-bin-console_worker
debug/.fingerprint/pipedconsole-99534bac03f8bf1c/: dep-lib-pipedconsole  lib-pipedconsole  lib-pipedconsole.json
debug/.fingerprint/pipedconsole-fa693322067e2181/: build-script-build-script-build  build-script-build-script-build.json
debug/.fingerprint/winapi-132d79a534d972cc/: build-script-build-script-build  build-script-build-script-build.json
debug/.fingerprint/winapi-3d48ab7a0a5ca346/: lib-winapi  lib-winapi.json
debug/.fingerprint/winapi-73b053b947e93f7c/: run-build-script-build-script-build  run-build-script-build-script-build.json
src/: com.rs  console.rs  error.rs  lib.rs
src/com/: receive.rs  send.rs
src/console/: drop.rs  flush.rs  new.rs  print.rs  println.rs  read_line.rs  write.rs
tests/: console.rs  performance.rs
