[package]
name = "pipedconsole"

description = "Piped console is a (currently windows-only) rust crate wich allows you to easily manage two or more different consoles from within one process."
keywords = ["win32", "winapi", "windows", "console", "terminal"]
categories = ["command-line-utilities", "command-line-interface", "accessibility"]
repository = "https://github.com/Foxcirc/pipedconsole"
documentation = "https://docs.rs/crate/pipedconsole/0.2.0"
readme = "README.md"

authors = ["foxcirc"]
version = "0.2.0"
edition = "2018"

license = "MIT"

[dependencies]
[dependencies.winapi]
version = "0.3.9"
features = [
  "winuser",
  "std",
  "errhandlingapi",
  "processthreadsapi",
  "winbase",
  "minwinbase",
  "handleapi",
  "namedpipeapi",
  "consoleapi",
  "processenv",
  "fileapi",
]
