[package]
name = "pipedconsole"

description = "Easily manage multiple windows consoles from one single process."
keywords = ["win32", "winapi", "windows", "console", "terminal"]
categories = ["command-line-interface", "accessibility"]
repository = "https://github.com/Foxcirc/pipedconsole"
documentation = "https://docs.rs/pipedconsole"
readme = "README.md"

authors = ["foxcirc"]
version = "0.3.1"
edition = "2018"

license = "MIT"

[dependencies]
[dependencies.winapi]
version = "0.3.9"
features = [
  "winuser",
  "std",
  "errhandlingapi",
  "processthreadsapi",
  "winbase",
  "minwinbase",
  "handleapi",
  "namedpipeapi",
  "consoleapi",
  "processenv",
  "fileapi",
]
